log/build_2022-11-11_18-15-52/ros2_robotx/stderr.log
  File "/home/adept/ros2_ws_2/install/ros2_robotx/lib/python3.8/site-packages/ros2_robotx/drone_control.py", line 163
    if self.follow_flag = True:
                        ^
SyntaxError: invalid syntax

